[tool.poetry]
name = "poll-api"
version = "0.1.0"
description = "Voting API service"
authors = ["stigsanek <stigsanek@yandex.ru>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
