[tool.poetry]
name = "poll-api"
version = "0.1.0"
description = "Voting API service"
authors = ["stigsanek <stigsanek@yandex.ru>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"
fastapi = "0.89.1"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sqlalchemy = "^2.0.1"
uvicorn = {extras = ["standart"], version = "^0.20.0"}


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
flake8 = "^6.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
